improved file structure

--- a/projects/trebbbble.html
+++ b/projects/trebbbble.html
@@ -94,7 +94,7 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/#projects" class="back-link"><p>&larr; back to home</p></a>
+            <a href="../index.html/#projects" class="back-link"><p>&larr; back to home</p></a>
             <div class="text-holder">
                 <h2 style="margin-bottom:3rem;">Trebbbble</h2>
                 <p>A website that can recognize music from short-form videos.</p>
@@ -103,11 +103,11 @@
                 <p class="dramatic"><i>This is exactly what Trebbbble was created for.</i></p>
                 <div id="song-card">
                     <div class="cover-and-links">
-                        <img src="media/cover.jpg" alt="Album Cover" id="cover">
+                        <img src="../media/cover.jpg" alt="Album Cover" id="cover">
                         <div class="music-link-holder">
-                            <a href="https://open.spotify.com/search/Complexion%20%28A%20Zulu%20Love%29%20Kendrick%20Lamar" target="_blank" class="icon-link"><img src="media/spotify.svg" alt="Spotify" class="icon"></a>
-                            <a href="https://music.youtube.com/search?q=Complexion%20%28A%20Zulu%20Love%29%20Kendrick%20Lamar" target="_blank" class="icon-link"><img src="media/yt_music.svg" alt="YouTube Music" class="icon"></a>
-                            <a href="https://music.apple.com/us/search?term=Complexion%20%28A%20Zulu%20Love%29%20Kendrick%20Lamar" target="_blank" class="icon-link"><img src="media/apple_music.svg" alt="Apple Music" class="icon"></a>
+                            <a href="https://open.spotify.com/search/Complexion%20%28A%20Zulu%20Love%29%20Kendrick%20Lamar" target="_blank" class="icon-link"><img src="../media/spotify.svg" alt="Spotify" class="icon"></a>
+                            <a href="https://music.youtube.com/search?q=Complexion%20%28A%20Zulu%20Love%29%20Kendrick%20Lamar" target="_blank" class="icon-link"><img src="../media/yt_music.svg" alt="YouTube Music" class="icon"></a>
+                            <a href="https://music.apple.com/us/search?term=Complexion%20%28A%20Zulu%20Love%29%20Kendrick%20Lamar" target="_blank" class="icon-link"><img src="../media/apple_music.svg" alt="Apple Music" class="icon"></a>
                         </div>
                     </div>
                     <div>
