--- a/projects/wellness-journal.html
+++ b/projects/wellness-journal.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/#projects" class="back-link"><p>&larr; back to home</p></a>
+            <a href="../index.html/#projects" class="back-link"><p>&larr; back to home</p></a>
             <div class="text-holder">
                 <h2 style="margin-bottom:3rem;">Wellness Journal</h2>
                 <p>A survey-based mental journaling app.</p>
