--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
     </head>
     <body>
         <main>
-            <a href="index.html" class="back-link"><p>&larr;&ensp;back to home</p></a>
+            <a href="https://noahham.com/#projects" class="back-link"><p>&larr;&ensp;back to home</p></a>
             <h1 class="error">404</h1>
             <p class="error-message">Sorry, but the page you're looking for doesn't exist.</p>
         </main>
