--- a/404.html
+++ b/404.html
@@ -7,27 +7,19 @@
         <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
         <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
         <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/breakout.css">
         <style>
-            main {
-                margin-top: 3rem;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .back-link {margin-bottom: 13rem;}
-
-            .back-link p {
-                color: #999999;
-                transition: all 0.5s;
-            }
-
-            .back-link:hover p {color: white;}
-
             .error {
-                margin: 0 0 4rem;
-                padding: 0;
                 font-size: 3rem;
+                color: #e3e3e3;
+
+                margin-top: 13rem;
+                margin-bottom: 4rem;
+                padding: 0;
+
+                transition: all 0.3s;
+            }
+            .error:hover {
                 color: white;
             }
 
