adjusted onload animation timing and structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body class="hidden-scrollbar">
-        <main class="main">
+        <main>
             <!-- HERO SCREEN -->
             <a href="#experience" id="name">
                 <h1 class="hero-title">noah</h1>
@@ -103,8 +103,8 @@
                 </div>
             </div>
         </main>
+        <script src="scripts/onLoad.js"></script>
         <script src="scripts/heroAnimation.js"></script>
         <script src="scripts/scrollTo.js"></script>
-        <script src="scripts/onLoad.js"></script>
     </body>
 </html>
