added onload effects for breakout pages

--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -56,5 +56,6 @@
                 </div>
             </div>
         </main>
+        <script src="../scripts/onLoad.js"></script>
     </body>
 </html>
