--- a/projects/duckweb-autofill.html
+++ b/projects/duckweb-autofill.html
@@ -24,5 +24,6 @@
                 </div>
             </div>
         </main>
+        <script src="../scripts/onLoad.js"></script>
     </body>
 </html>
