--- a/projects/photography.html
+++ b/projects/photography.html
@@ -23,5 +23,6 @@
                 </div>
             </div>
         </main>
+        <script src="../scripts/onLoad.js"></script>
     </body>
 </html>
