--- a/projects/trebbbble.html
+++ b/projects/trebbbble.html
@@ -122,5 +122,6 @@
                 </div>
             </div>
         </main>
+        <script src="../scripts/onLoad.js"></script>
     </body>
 </html>
