--- a/projects/wellness-journal.html
+++ b/projects/wellness-journal.html
@@ -23,5 +23,6 @@
                 </div>
             </div>
         </main>
+        <script src="../scripts/onLoad.js"></script>
     </body>
 </html>
