--- a/projects/wordle-solver.html
+++ b/projects/wordle-solver.html
@@ -22,5 +22,6 @@
                 </div>
             </div>
         </main>
+        <script src="../scripts/onLoad.js"></script>
     </body>
 </html>
