project section update

--- a/projects.html
+++ b/projects.html
@@ -8,10 +8,54 @@
         <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/breakout.css">
+        <style>
+            p {color: #999999}
+
+            .project {
+                width: 100%;
+                margin-top: 16px;
+                transition: all 0.3s;
+            }
+
+            .project:hover {transform: translateY(-5px);}
+
+            .project h2{transition: all 0.3s;}
+
+            .project:hover h2 {color: white;}
+        </style>
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/" class="back-link"><p>&larr;&ensp;back to home</p></a>
+            <a href="index.html" class="back-link"><p>&larr;&ensp;back to home</p></a>
+            <a href="" class="project" style="margin-top: 5rem;">
+                <h2>Byte 'n Bite</h2>
+                <p>This will be a decently long gns</p>
+            </a>
+            <a href="" class="project">
+                <h2>DuckWeb Autofill</h2>
+                <p>This will be a decently long gns</p>
+            </a>
+            <a href="" class="project">
+                <h2>Photography Website</h2>
+                <p>This will be a decently long gns</p>
+            </a>
+            <a href="" class="project">
+                <h2>Portfolio Website</h2>
+                <p>This will be a decently long gns</p>
+            </a>
+            <a href="" class="project">
+                <h2>Trebbbble</h2>
+                <p>This will be a decently long gns</p>
+            </a>
+            <a href="" class="project">
+                <h2>Wellness Journal</h2>
+                <p>This will be a decently long gns</p>
+            </a>
+            <a href="" class="project">
+                <h2>Wordle Solver</h2>
+                <p>This will be a decently long gns</p>
+            </a>
         </main>
+        <script src="scripts/onLoad.js"></script>
     </body>
 </html>
