fixed 404 not showing

--- a/404.html
+++ b/404.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/breakout.css">
         <style>
+            main {opacity: 1;}
+
             .error {
                 font-size: 3rem;
                 color: #e3e3e3;
