fixed mobile spacing

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,6 @@
             main {
                 margin-left: 35vw;
                 margin-right: 35vw;
-                /* FIXME */
             }
 
             main .project-holder {
@@ -50,6 +49,21 @@
             h2 {margin:0;}
 
             .position {color: #434343;}
+
+            @media (max-width: 1300px) {
+                main {
+                    margin-left: 20vw;
+                    margin-right: 20vw;
+                }
+            }
+
+            /* Mobile */
+            @media (max-width: 800px) and (orientation: portrait) {
+                main {
+                    margin-left: 7vw;
+                    margin-right: 7vw;
+                }
+            }
         </style>
     </head>
     <body>
