--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,6 @@
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/breakout.css">
         <style>
-            main {
-                margin-left: 35vw;
-                margin-right: 35vw;
-            }
-
             main .project-holder {
                 gap: 56px;
                 transition: all 1s;
@@ -49,26 +44,11 @@
             h2 {margin:0;}
 
             .position {color: #434343;}
-
-            @media (max-width: 1300px) {
-                main {
-                    margin-left: 20vw;
-                    margin-right: 20vw;
-                }
-            }
-
-            /* Mobile */
-            @media (max-width: 800px) and (orientation: portrait) {
-                main {
-                    margin-left: 7vw;
-                    margin-right: 7vw;
-                }
-            }
         </style>
     </head>
     <body>
         <main>
-            <a href="index.html" class="back-link"><p>&larr;&ensp;back to home</p></a>
+            <a href="https://noahham.com/#about" class="back-link"><p>&larr;&ensp;back to home</p></a>
             <div class="project-holder">
                 <a href="projects/byte-n-bite.html" class="project" style="margin-top: 5rem;">
                     <div class="header-holder">
