might mess up people, but it makes sense

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="link-holder">
                     <a href="mailto:noahham25@gmail.com" target="_blank" class="social-link"><p>email</p></a>
                     <a href="https://www.linkedin.com/in/noah-ham/" target="_blank" class="social-link"><p>linkedin</p></a>
-                    <a href="projects.html" target="_blank" class="social-link"><p>projects</p></a>
+                    <a href="projects.html" class="social-link"><p>projects</p></a>
                     <a href="https://www.github.com/noahham/" target="_blank" class="social-link"><p>github</p></a>
                     <a href="resume.pdf" target="_blank" class="social-link"><p>resume</p></a>
                 </div>
