updated breakout pages to go back to projects

--- a/projects/trebbbble.html
+++ b/projects/trebbbble.html
@@ -94,7 +94,7 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/#projects" class="back-link"><p>&larr; back to home</p></a>
+            <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
             <div class="text-holder">
                 <h2 style="margin-bottom:3rem;">Trebbbble</h2>
                 <p>A website that can recognize music from short-form videos.</p>
