--- a/projects/wordle-solver.html
+++ b/projects/wordle-solver.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/#projects" class="back-link"><p>&larr; Back to Home</p></a>
+            <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
             <div class="text-holder">
                 <h2 style="margin-bottom:3rem;">Wordle Solver</h2>
                 <p>A friendly user interface to help you beat the daily Wordle.</p>
