--- a/projects/duckweb-autofill.html
+++ b/projects/duckweb-autofill.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/#projects" class="back-link"><p>&larr; back to home</p></a>
+            <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
             <div class="text-holder">
                 <h2 style="margin-bottom:3rem;">DuckWeb Autofill</h2>
                 <p>A basic Chrome extension that autofills your University of Oregon DuckWeb login info.</p>
