--- a/projects/photography.html
+++ b/projects/photography.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/#projects" class="back-link"><p>&larr; back to home</p></a>
+            <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
             <div class="text-holder">
                 <h2 style="margin-bottom:3rem;">Photography</h2>
                 <p>A styled portfolio site that looks like it sells something but really does nothing.</p>
