--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -39,7 +39,7 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/#projects" class="back-link"><p>&larr; back to home</p></a>
+            <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
             <div class="text-holder">
                 <h2 style="margin-bottom:3rem;">Portfolio</h2>
                 <p>A place to showcase my experience, projects, and skills.</p>
