added tech stack to breakout pages

--- a/projects/duckweb-autofill.html
+++ b/projects/duckweb-autofill.html
@@ -13,7 +13,8 @@
         <main>
             <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
             <div class="text-holder">
-                <h2 style="margin-bottom:3rem;">DuckWeb Autofill</h2>
+                <h2>DuckWeb Autofill</h2>
+                <p class="stack"><i>HTML, CSS, Javascript</i></p>
                 <p>A basic Chrome extension that autofills your University of Oregon DuckWeb login info.</p>
                 <p>The DuckWeb login screen (and honestly the entirety of DuckWeb as a whole) is widely known for both looking and functioning like complete garbage. One particular problem with logging in is that normal password apps can't autofill the ID and PAC because both input boxes are marked as <code>password</code> inputs.</p>
                 <p>This extension is specialized to fix this issue by hard-coding the HTML ID's of each input, and each time a DuckWeb page is loaded, it looks for those ID's and fills in the given info.</p>
