--- a/projects/photography.html
+++ b/projects/photography.html
@@ -13,7 +13,8 @@
         <main>
             <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
             <div class="text-holder">
-                <h2 style="margin-bottom:3rem;">Photography</h2>
+                <h2>Photography</h2>
+                <p class="stack"><i>HTML, CSS, JavaScript</i></p>
                 <p>A styled portfolio site that looks like it sells something but really does nothing.</p>
                 <p>I've always looked at other photographer's portfolio's and wondered what it would look like if I made my own. After taking a class about HTML and CSS, I finally decided to.</p>
                 <p>During this project, I started playing around with sticky positioned elements and this was also the first time I used the body display: flex and flex-direction: column to center all of the sections within the site. This was honestly the first successful site I've made.</p>
