--- a/projects/trebbbble.html
+++ b/projects/trebbbble.html
@@ -18,8 +18,7 @@
                 justify-content: space-between;
 
                 background-color: #f0f0f0;
-                min-width: 50%;
-                max-width: 75%;
+                width: 75%;
                 height: 30vh;
                 border-radius: 10px;
 
@@ -96,7 +95,8 @@
         <main>
             <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
             <div class="text-holder">
-                <h2 style="margin-bottom:3rem;">Trebbbble</h2>
+                <h2>Trebbbble</h2>
+                <p class="stack"><i>HTML, CSS, JavaScript, Python, Flask, ACRCloud</i></p>
                 <p>A website that can recognize music from short-form videos.</p>
                 <p class="dramatic">A common problem that a lot of people have when it comes to watching short-form content stems from one of its main features: The music. </p>
                 <p>With songs becoming more and more viral overnight, it's difficult for those watching short-form content like TikTok, Instagram Reels, or YouTube Shorts to continue listening to the music shown in their videos when the song is only played for 10-15 seconds.</p>
