--- a/projects/wellness-journal.html
+++ b/projects/wellness-journal.html
@@ -13,7 +13,8 @@
         <main>
             <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
             <div class="text-holder">
-                <h2 style="margin-bottom:3rem;">Wellness Journal</h2>
+                <h2>Wellness Journal</h2>
+                <p class="stack"><i>Python, Tkinter</i></p>
                 <p>A survey-based mental journaling app.</p>
                 <p>This was the product of my first hackathon. When starting to improve your mental health, simply journaling is a hard thing to start doing. It's difficult to know where to start at all.</p>
                 <p>This app aims to streamline the process a bit better with a survey-based approach. Users are able to pick between short-answer or numerical (rating from 1-10) questions.</p>
