--- a/projects/byte-n-bite.html
+++ b/projects/byte-n-bite.html
@@ -13,7 +13,8 @@
         <main>
             <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
             <div class="text-holder">
-                <h2 style="margin-bottom:3rem;">Byte 'n Bite</h2>
+                <h2>Byte 'n Bite</h2>
+                <p class="stack"><i>Python, Tkinter, OpenAI</i></p>
                 <p>An offline, AI powered recipe generating and lookup app.</p>
                 <p>Most people only really cycle between the same recipes. Coming home after a long day, it's always nice to cook something comfortable and familiar. This app stores recipes in a local database that can be displayed while offline.</p>
                 <p>The search algorithm can filter pretty much anything. Whether you know the recipe you want to make or you just have a list of ingredients, you can just type in the search box.</p>
