--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -41,7 +41,8 @@
         <main>
             <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
             <div class="text-holder">
-                <h2 style="margin-bottom:3rem;">Portfolio</h2>
+                <h2>My Portfolio</h2>
+                <p class="stack"><i>HTML, CSS, JavaScript</i></p>
                 <p>A place to showcase my experience, projects, and skills.</p>
                 <p>Having a personal website is something I've always wanted to have. Being able to give someone a URL and have them see everything you've done is such a cool concept.</p>
                 <p>The big idea that I had for the site was the opening section. The part that would draw people in and show them that I know what I'm doing.</p>
@@ -50,7 +51,7 @@
                     <p class="disappearing-text">Hover Me!</p>
                     <p class="moving-dot">.</p>
                 </div>
-                <p class="dramatic">This is the premise of the animation. While it's relatively simple, just an animation of translation and text color, it's also smooth and elegant.</p>
+                <p class="dramatic">This is the premise of the animation. While it's relatively simple, just an animation of <code>translation</code> and <code>text-color</code>, it's also smooth and elegant.</p>
                 <div class="link-holder">
                     <a href="https://github.com/noahham/noahham.github.io/" target="_blank" class="social-link"><p>github</p></a>
                 </div>
