--- a/projects/wordle-solver.html
+++ b/projects/wordle-solver.html
@@ -13,7 +13,8 @@
         <main>
             <a href="https://noahham.com/projects" class="back-link"><p>&larr; back to projects</p></a>
             <div class="text-holder">
-                <h2 style="margin-bottom:3rem;">Wordle Solver</h2>
+                <h2>Wordle Solver</h2>
+                <p class="stack"><i>Python, Tkinter</i></p>
                 <p>A friendly user interface to help you beat the daily Wordle.</p>
                 <p>This was one of the very first programming projects that I made. During quarantine, a lot of people found themselves obsessed with Wordle. Some were amazing at it, and others: not so much.</p>
                 <p>This is a simple tool to help those people out, without just giving away the answer.</p>
