made privacy policy actually visible (NO LONGER BREAKING THE LAW)

--- a/projects/duckweb-autofill/privacy-policy.html
+++ b/projects/duckweb-autofill/privacy-policy.html
@@ -3,11 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DuckWeb Autofill</title>
+        <title>Privacy Policy</title>
         <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
         <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
         <link rel="stylesheet" href="../../styles/main.css">
         <link rel="stylesheet" href="../../styles/breakout.css">
+        <style>
+            main {margin-top: 10rem;}
+            .dramatic {margin-top: 3rem;}
+        </style>
     </head>
     <body>
         <main>
@@ -34,5 +38,6 @@
                 <p>You can remove your credentials at any time by simply uninstalling the extension. Your data will be deleted automatically.</p>
             </div>
         </main>
+        <script src="../../scripts/onLoad.js"></script>
     </body>
 </html>
