--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </a>
                         <a href="projects/byte-n-bite.html" class="card">
                             <h2 class="card-title">Byte 'n Bite</h2>
-                            <p class="card-description">An AI powered recipe<br>generator.</p>
+                            <p class="card-description">An AI-powered recipe<br>generator.</p>
                         </a>
                     </div>
                     <div class="row">
@@ -92,7 +92,7 @@
             </div>
             <!-- ABOUT SCREEN -->
             <div class="section" id="about">
-                <p>I'm Noah, currently studying computer science as a freshman at the University of Oregon.</p>
+                <p>I'm Noah, currently studying computer science as a first-year student at the University of Oregon.</p>
                 <p>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m a designer for my school's hackathon, QuackHacks, while also being a full-time student.</p>
                 <p>If you're interested in working on anything together, feel free to contact me on any of the platforms below.</p>
                 <div class="link-holder">
