updated photography link

--- a/projects/photography.html
+++ b/projects/photography.html
@@ -19,7 +19,7 @@
                 <p>I've always looked at other photographer's portfolio's and wondered what it would look like if I made my own. After taking a class about HTML and CSS, I finally decided to.</p>
                 <p>During this project, I started playing around with sticky positioned elements and this was also the first time I used the body display: flex and flex-direction: column to center all of the sections within the site. This was honestly the first successful site I've made.</p>
                 <div class="link-holder">
-                    <a href="https://noahham.com/photography/" target="_blank" class="social-link"><p>website</p></a>
+                    <a href="https://photography.noahham.com/" target="_blank" class="social-link"><p>website</p></a>
                     <a href="https://github.com/noahham/photography/" target="_blank" class="social-link"><p>github</p></a>
                 </div>
             </div>
