--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <!-- ABOUT SCREEN -->
             <div class="section" id="about">
                 <p>I'm Noah, currently studying computer science as a first-year student at the University of Oregon.</p>
-                <p>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m a designer for my school's hackathon, QuackHacks, while also being a full-time student.</p>
+                <p>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m a designer for my university's hackathon, QuackHacks, while also being a full-time student.</p>
                 <p>If you're interested in working on anything together, feel free to contact me on any of the platforms below.</p>
                 <div class="link-holder">
                     <a href="mailto:noahham25@gmail.com" target="_blank" class="social-link"><p>email</p></a>
