updated wording again

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </a>
                         <a href="projects/byte-n-bite.html" class="card">
                             <h2 class="card-title">Byte 'n Bite</h2>
-                            <p class="card-description">An AI-powered recipe<br>generator.</p>
+                            <p class="card-description">An AI-powered recipe generator.</p>
                         </a>
                     </div>
                     <div class="row">
@@ -75,7 +75,7 @@
                         </a>
                         <a href="projects/wellness-journal.html" class="card">
                             <h2 class="card-title">Wellness Journal</h2>
-                            <p class="card-description">A comprehensive app<br>to keep up mental<br>health.</p>
+                            <p class="card-description">A comprehensive app<br>to keep up mental health.</p>
                         </a>
                     </div>
                     <div class="row">
