added tui typing test project

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                             <h2 class="card-title">DuckWeb Autofill</h2>
                             <p class="card-description">A simple extension to autofill your login for UO's DuckWeb.</p>
                         </a>
-                        <a href="projects/photography.html" class="card">
-                            <h2 class="card-title">Photo Portfolio</h2>
-                            <p class="card-description">A stylish website to showcase my photography.</p>
+                        <a href="projects/type-lat.html" class="card">
+                            <h2 class="card-title">TUI Typing Test</h2>
+                            <p class="card-description">A terminal-based typing test accessible through SSH.</p>
                         </a>
                     </div>
                 </div>
