added tui typing test to the projects page

--- a/projects.html
+++ b/projects.html
@@ -53,21 +53,21 @@
                         <h2>Byte 'n Bite</h2>
                         <p class="position"><i>Python, Tkinter</i></p>
                     </div>
-                    <p>An AI powered recipe database with lookup and generating capabilities.</p>
+                    <p>An offline, AI powered recipe generating and lookup app.</p>
                 </a>
                 <a href="projects/duckweb-autofill" class="project">
                     <div class="header-holder">
                         <h2>DuckWeb Autofill</h2>
                         <p class="position"><i>HTML, CSS, JavaScript</i></p>
                     </div>
-                    <p>A simple Chrome extension to autofill your credentials for the University of Oregon's DuckWeb.</p>
+                    <p>A basic Chrome extension that autofills your University of Oregon DuckWeb login info.</p>
                 </a>
                 <a href="projects/photography.html" class="project">
                     <div class="header-holder">
                         <h2>Photography Portfolio</h2>
                         <p class="position"><i>HTML, CSS, JavaScript</i></p>
                     </div>
-                    <p>A clean website that showcases my photography as a mock professional portfolio.</p>
+                    <p>A styled portfolio site that looks like it sells something but really does nothing.</p>
                 </a>
                 <a href="projects/portfolio.html" class="project">
                     <div class="header-holder">
@@ -81,21 +81,28 @@
                         <h2>Trebbbble</h2>
                         <p class="position"><i>HTML, CSS, JavaScript, Python, Flask</i></p>
                     </div>
-                    <p>A website designed to help people identify music from TikTok, Instagram Reels, or YouTube Shorts.</p>
+                    <p>A website that can recognize music from short-form videos.</p>
+                </a>
+                <a href="projects/type-lat.html" class="project">
+                    <div class="header-holder">
+                        <h2>TUI Typing Test</h2>
+                        <p class="position"><i>Golang, Bubbletea, SSH</i></p>
+                    </div>
+                    <p>A website that can recognize music from short-form videos.</p>
                 </a>
                 <a href="projects/wellness-journal.html" class="project">
                     <div class="header-holder">
                         <h2>Wellness Journal</h2>
                         <p class="position"><i>Python, Tkinter</i></p>
                     </div>
-                    <p>A mindful app that helps users maintain their mental health through a survey-based approach.</p>
+                    <p>A survey-based mental journaling app.</p>
                 </a>
                 <a href="projects/wordle-solver.html" class="project">
                     <div class="header-holder">
                         <h2>Wordle Solver</h2>
                         <p class="position"><i>Python, Tkinter</i></p>
                     </div>
-                    <p>A helpful app that lets you solve the daily Wordle puzzle.</p>
+                    <p>A friendly user interface to help you solve the daily Wordle.</p>
                 </a>
             </div>
         </main>
