--- a/projects/wordle-solver.html
+++ b/projects/wordle-solver.html
@@ -15,7 +15,7 @@
             <div class="text-holder">
                 <h2>Wordle Solver</h2>
                 <p class="stack"><i>Python, Tkinter</i></p>
-                <p>A friendly user interface to help you beat the daily Wordle.</p>
+                <p>A friendly user interface to help you solve the daily Wordle.</p>
                 <p>This was one of the very first programming projects that I made. During quarantine, a lot of people found themselves obsessed with Wordle. Some were amazing at it, and others: not so much.</p>
                 <p>This is a simple tool to help those people out, without just giving away the answer.</p>
                 <div class="link-holder">
