fixed project link

--- a/projects/type-lat.html
+++ b/projects/type-lat.html
@@ -20,7 +20,7 @@
                 <p>Before this project, most of my programming has been with Python. I was pretty hesitant to approach Golang and Bubbletea but it turned out a lot more simple that I initially though it would be.</p>
                 <p>If you want to try the test out yourself, just type <code>ssh test@type.lat</code> into your terminal.</p>
                 <div class="link-holder">
-                    <a href="https://github.com/noahham/wordle-solver/" target="_blank" class="social-link"><p>github</p></a>
+                    <a href="https://github.com/noahham/ssh-type/" target="_blank" class="social-link"><p>github</p></a>
                 </div>
             </div>
         </main>
