--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1 class="hero-title dot">..</h1>
                 <h1 class="hero-title dot">.</h1>
             </a>
-            <!-- EXPERIENCE SCREEN -->
+            <!-- TIMELINE SCREEN -->
             <div class="section" id="experience">
                 <div class="timeline-holder">
                     <div class="timeline-block">
@@ -42,6 +42,8 @@
                         <div class="timeline-dot"></div>
                         <div class="line"></div>
                         <div class="timeline-dot"></div>
+                        <div class="line"></div>
+                        <div class="timeline-dot"></div>
                     </div>
                     <div class="timeline-block">
                         <div class="timeline-text">
@@ -51,6 +53,11 @@
                         <div class="timeline-text">
                             <h2 class="card-title">Sep 2024</h2>
                             <p class="card-description">Enrolled in the University of Oregon as a Computer Science major.</p>
+                        </div>
+                        <div class="timeline-space"></div>
+                        <div class="timeline-text">
+                            <h2 class="card-title">Sep 2025</h2>
+                            <p class="card-description">Transferred to the University of Wisconsin-Madison as a Computer Science major.</p>
                         </div>
                     </div>
                 </div>
@@ -92,8 +99,8 @@
             </div>
             <!-- ABOUT SCREEN -->
             <div class="section" id="about">
-                <p>I'm Noah, currently studying computer science as a first-year student at the University of Oregon.</p>
-                <p>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m a designer for my university's hackathon, QuackHacks, while also being a full-time student.</p>
+                <p>I'm Noah, currently studying computer science as a first-year student at the University of Wisconsin-Madison.</p>
+                <p>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m a full-time student as a major in Computer Science and minor in Graphic Design.</p>
                 <p>If you're interested in working on anything together, feel free to contact me on any of the platforms below.</p>
                 <div class="link-holder">
                     <a href="mailto:noahham25@gmail.com" target="_blank" class="social-link"><p>email</p></a>
