--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </div>
                         <div class="timeline-space"></div>
                         <div class="timeline-text">
-                            <h2 class="card-title" style="text-align:right;">Feb 2025</h2>
+                            <h2 class="card-title" style="text-align:right;">Feb 2025 &rarr; Jul 2025</h2>
                             <p class="card-description" style="text-align:right;">Hired as a lead designer for UO's hackathon, QuackHacks.</p>
                         </div>
                     </div>
