--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 <div class="timeline-holder">
                     <div class="timeline-block">
                         <div class="timeline-text">
-                            <h2 class="card-title" style="text-align:right;">Feb 2022 &rarr; Sep 2024</h2>
+                            <h2 class="card-title" style="text-align:right;">Feb 2022 - Sep 2024</h2>
                             <p class="card-description" style="text-align:right;">Worked as a store associate at a Five Below retail store.</p>
                         </div>
                         <div class="timeline-space"></div>
                         <div class="timeline-text">
-                            <h2 class="card-title" style="text-align:right;">Feb 2025 &rarr; Jul 2025</h2>
+                            <h2 class="card-title" style="text-align:right;">Feb 2025 - Sep 2025</h2>
                             <p class="card-description" style="text-align:right;">Hired as a lead designer for UO's hackathon, QuackHacks.</p>
                         </div>
                     </div>
