--- a/projects.html
+++ b/projects.html
@@ -10,28 +10,36 @@
         <link rel="stylesheet" href="styles/breakout.css">
         <style>
             main .project-holder {
-                gap: 52px;
+                gap: 6px;
                 transition: all 1s;
             }
 
-            main.after .project-holder {gap: 48px;}
+            main.after .project-holder {gap: 0;}
 
             .project-holder {
                 display: flex;
                 flex-direction: column;
                 margin-top: 36px;
+                padding-left: 20px;
+                padding-right: 20px;
             }
+
+            .project-holder:hover .project {opacity: 0.5;}
 
             p {color: #999999; margin:0;}
 
             .project {
                 width: 100%;
-                transition: transform 0.3s;
+                transition: opacity 0.3s;
+                padding-top: 24px;
+                padding-bottom: 24px;
             }
 
-            .project:hover {transform: translateY(-5px);}
+            .project:hover {
+                opacity: 1 !important;
+            }
 
-            .project h2{transition: all 0.3s;}
+            .project h2{transition: all 0.1s;}
 
             .header-holder {
                 display: flex;
